add certbot usage block.

--- a/conf.d/web_app.conf
+++ b/conf.d/web_app.conf
@@ -8,4 +8,8 @@ server {
         root /usr/share/nginx/html;
         index  index.html index.htm;
     }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
 }
