--- a/conf.d/web_app.conf
+++ b/conf.d/web_app.conf
@@ -1,15 +1,23 @@
 server {
-    listen 80;
-    server_name siavashfazli.ir;
-    return 301 https://$host$request_uri;
-    access_log  /var/log/nginx/access.log;
-    error_log   /var/log/nginx/error.log;
-    location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
+	listen 80;
+	server_name siavashfazli.ir;
+	return 301 https://siavashfazli.ir$request_uri;
+	access_log  /var/log/nginx/access.log;
+	error_log   /var/log/nginx/error.log;
+	location / {
+        	root /usr/share/nginx/html;
+        	index  index.html index.htm;
     }
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+    	location /.well-known/acme-challenge/ {
+        	root /var/www/certbot;
     }
 
+}
+
+server {
+	listen 443;
+        ssl_certificate /etc/nginx/ssl/live/siavashfazli.ir/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/live/siavashfazli.ir/privkey.pem;
+	#ssl_certificate /etc/nginx/ssl/live/siavashfazli.ir/fullchain.pem;
+        #ssl_certificate_key /etc/nginx/ssl/live/siavashfazli.ir/privkey.pem;
 }
