--- a/conf.d/web_app.conf
+++ b/conf.d/web_app.conf
@@ -1,17 +1,15 @@
 server {
-	listen 80;
-	server_name siavashfazli.ir;
-	return 301 https://siavashfazli.ir$request_uri;
-	access_log  /var/log/nginx/access.log;
-	error_log   /var/log/nginx/error.log;
-	location / {
-        	root /usr/share/nginx/html;
-        	index  index.html index.htm;
-    }
-	location /.well-known/acme-challenge/ {
-        	root /var/www/certbot;
+    listen 80;
+    listen [::]:80;
+
+    server_name mydigibazi.ir www.mydigibazi.ir;
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 
+    location / {
+        return 301 https://mydigibazi.ir$request_uri;
+    }
 }
-
-
